tests/NormalTests/paczka1/small_fuzzy/61568347.err
Error in line 2: BA80b6A1380,2
Error in line 4: A13 A849 95,0
Error in line 5: NNXwm6k A849 68,3
Error in line 7: A13 A13 41,7
Error in line 3: BA80b6 A13 341,7
